--- a/Rummage/HistoryPopup.xaml
+++ b/Rummage/HistoryPopup.xaml
@@ -1,16 +1,17 @@
 ﻿<Window x:Class="Rummage.HistoryPopup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:xwc="clr-namespace:XanWPFControls;assembly=XanWPFControls" Title="Rummage - History selector" Height="200" Width="400"
+        xmlns:xwc="clr-namespace:XanWPFControls;assembly=XanWPFControls" Title="Rummage - History selector"
         WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False"
         WindowStyle="ToolWindow"
         Closing="Window_Closing"
+        SizeToContent="WidthAndHeight"
         >
     <DockPanel>
         <Grid DockPanel.Dock="Bottom">
             <Grid.RowDefinitions>
-                <RowDefinition />
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
