--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -81,10 +81,11 @@
                             <!--<MenuItem Name="MainMenuFileSearchHistory"  Header="Search History" Click="MainMenuFileSearchHistory_Click"></MenuItem>-->
                             <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
 						</MenuItem>
-						<MenuItem Header="Help">
-							<MenuItem Name="MainMenuHelpAbout" Header="About" Click="MainMenuHelpAbout_Click"></MenuItem>
-						</MenuItem>
-					</Menu>
+                        <MenuItem Header="Help">
+                            <MenuItem Name="MainMenuHelpRegex" Header="Regex Help" Click="MainMenuHelpRegex_OnClick"></MenuItem>
+                            <MenuItem Name="MainMenuHelpAbout" Header="About" Click="MainMenuHelpAbout_Click"></MenuItem>
+                        </MenuItem>
+                    </Menu>
                     <!-- Column 1 (Search for) -->
 					<Label Name="lblSearchFor" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search for ...</Label>
                     <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="0,0,1,0">
