--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -83,6 +83,9 @@
                             <MenuItem Name="LoadSearchRequest" Header="Load Search Request" Click="LoadSearchRequest_OnClick"></MenuItem>
                             <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
 						</MenuItem>
+                        <MenuItem Header="Edit">
+                            <MenuItem Name="EditCopyFilenames" Header="Copy Selected Filenames" Click="EditCopyFilenames_OnClick"></MenuItem>
+                        </MenuItem>
                         <MenuItem Header="Help">
                             <MenuItem Name="MainMenuHelpRegex" Header="Regex Help" Click="MainMenuHelpRegex_OnClick"></MenuItem>
                             <MenuItem Name="MainMenuHelpAbout" Header="About" Click="MainMenuHelpAbout_Click"></MenuItem>
