--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -60,79 +60,20 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+
             </Grid.ColumnDefinitions>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.7*"/>
-                    <ColumnDefinition Width="0.3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Name="gridSearchParms" Grid.Column="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" MaxHeight="90"/>
-                        <RowDefinition Height="Auto" MinHeight="30" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="300"/>
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-					<Menu Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left">
-						<MenuItem Header="File">
-                            <MenuItem Name="NewSearchRequest" Header="New Search Request" Click="NewSearchRequest_OnClick"></MenuItem>
-                            <MenuItem Name="SaveSearchRequest" Header="Save Search Request" Click="SaveSearchRequest_OnClick"></MenuItem>
-                            <MenuItem Name="SaveSearchRequestAs" Header="Save Search Request As ..." Click="SaveSearchRequestAs_OnClick"></MenuItem>
-                            <MenuItem Name="LoadSearchRequest" Header="Load Search Request" Click="LoadSearchRequest_OnClick"></MenuItem>
-                            <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
-						</MenuItem>
-                        <MenuItem Header="Edit">
-                            <MenuItem Name="EditCopyFilenames" Header="Copy Selected Filenames" Click="EditCopyFilenames_OnClick"></MenuItem>
-                        </MenuItem>
-                        <MenuItem Header="Help">
-                            <MenuItem Name="MainMenuHelpRegex" Header="Regex Help" Click="MainMenuHelpRegex_OnClick"></MenuItem>
-                            <MenuItem Name="MainMenuHelpAbout" Header="About" Click="MainMenuHelpAbout_Click"></MenuItem>
-                        </MenuItem>
-                    </Menu>
-                    <!-- Column 1 (Search for) -->
-					<Label Name="lblSearchFor" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search for ...</Label>
-                    <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="0,0,1,0">
-                        <TextBox Name="textBoxSearchStrings" Grid.Row="1" Grid.Column="0" MaxHeight="90" Text="" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextChanged="textBoxSearchStrings_TextChanged" TabIndex="0" Opacity="0.8" />
-                    </Border>
-                    <Button Name="btnSearchHistory" Grid.Row="1" Grid.Column="0" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnSearchHistory_Click" ToolTip="Search History...">=</Button>
-                    <!-- Column 2 (Where to search) -->
-					<Label Name="lblSearchHere"  Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search where ...</Label>
-                    <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,1">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="300" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Button Name="Browse"  Grid.Row="0" Grid.Column="1" Click="Browse_Click" TabIndex="7">Browse...</Button>
-                        </Grid>
-                    </Border>
-                    <!--<TextBox Name="textBoxFolders"  Grid.Row="1" Grid.Column="1" MaxHeight="90" Text="" AcceptsReturn="True" TextChanged="textBoxFolders_TextChanged" VerticalScrollBarVisibility="Auto" TabIndex="1" Opacity="0.8"/>-->
-                    <xwc:DirectoryChooser Name="dirChooser" Grid.Row="1" Grid.Column="1" MaxHeight="90" TextChanged="dirChooser_TextChanged"  TabIndex="1" IsTabStop="True" Opacity="0.8" ></xwc:DirectoryChooser>
-                        <Button Name="btnFoldersHistory" Grid.Row="1" Grid.Column="1" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnFoldersHistory_Click" ToolTip="Folder History...">=</Button>
-                    
-                    <Border Grid.Column="0" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
-                    <Border Grid.Column="1" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
-                    <CheckBox Name="chkRecurse" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True" Margin="10,0,0,0" TabIndex="4" Checked="chkRecurse_Checked">Search sub-folders</CheckBox>
-                        <CheckBox Name="chkBinaries" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" IsChecked="False" Margin="0,0,30,0" TabIndex="5" Checked="chkBinaries_Checked">Search binaries</CheckBox>
-                        <CheckBox Name="chkCaseSensitive" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" TabIndex="6" Checked="chkCaseSensitive_Checked">Case-sensitive search</CheckBox>
-                        <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,10,0" TabIndex="2" IsDefault="True">
-                        	<Button.Background>
-                        		<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                        			<GradientStop Color="#FFF3F3F3" Offset="0"/>
-                        			<GradientStop Color="#FFEBEBEB" Offset="0.5"/>
-                        			<GradientStop Color="#FFDDDDDD" Offset="0.5"/>
-                        			<GradientStop Color="#FF8CE428" Offset="1"/>
-                        		</LinearGradientBrush>
-                        	</Button.Background>_Start Search</Button>
-                        
-                </Grid>
-                <TabControl Name="tabFilters" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
+            <DockPanel>
+                <Expander ExpandDirection="Left" DockPanel.Dock="Right" FontWeight="Bold">
+                    <Expander.Header>
+                        <TextBlock Text="    F I L T E R S" RenderTransformOrigin="0,0">
+                            <TextBlock.LayoutTransform>
+                                <TransformGroup>
+                                    <RotateTransform CenterX="25" CenterY="25" Angle="90" />
+                                </TransformGroup>
+                            </TextBlock.LayoutTransform>
+                        </TextBlock>
+                    </Expander.Header>
+                    <TabControl Name="tabFilters" >
                     <TabItem Name="tabItemIncludes">
                     	<TabItem.Header>
 							<StackPanel Orientation="Horizontal"><Label Name="labelIncludeTabHeader">Include Items</Label><Label Foreground="Green" FontWeight="Bold">++</Label></StackPanel>             	
@@ -194,8 +135,75 @@
                     </TabItem>
 
                 </TabControl>
+                </Expander>
+                <Grid Name="gridSearchParms" Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" MaxHeight="90"/>
+                        <RowDefinition Height="Auto" MinHeight="30" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+					<Menu Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left">
+						<MenuItem Header="File">
+                            <MenuItem Name="NewSearchRequest" Header="New Search Request" Click="NewSearchRequest_OnClick"></MenuItem>
+                            <MenuItem Name="SaveSearchRequest" Header="Save Search Request" Click="SaveSearchRequest_OnClick"></MenuItem>
+                            <MenuItem Name="SaveSearchRequestAs" Header="Save Search Request As ..." Click="SaveSearchRequestAs_OnClick"></MenuItem>
+                            <MenuItem Name="LoadSearchRequest" Header="Load Search Request" Click="LoadSearchRequest_OnClick"></MenuItem>
+                            <MenuItem Header="Exit" Click="MenuItem_Click"></MenuItem>
+						</MenuItem>
+                        <MenuItem Header="Edit">
+                            <MenuItem Name="EditCopyFilenames" Header="Copy Selected Filenames" Click="EditCopyFilenames_OnClick"></MenuItem>
+                        </MenuItem>
+                        <MenuItem Header="Help">
+                            <MenuItem Name="MainMenuHelpRegex" Header="Regex Help" Click="MainMenuHelpRegex_OnClick"></MenuItem>
+                            <MenuItem Name="MainMenuHelpAbout" Header="About" Click="MainMenuHelpAbout_Click"></MenuItem>
+                        </MenuItem>
+                    </Menu>
+                    <!-- Column 1 (Search for) -->
+					<Label Name="lblSearchFor" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search for ...</Label>
+                    <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="0,0,1,0">
+                        <TextBox Name="textBoxSearchStrings" Grid.Row="1" Grid.Column="0" MaxHeight="90" Text="" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextChanged="textBoxSearchStrings_TextChanged" TabIndex="0" Opacity="0.8" />
+                    </Border>
+                    <Button Name="btnSearchHistory" Grid.Row="1" Grid.Column="0" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnSearchHistory_Click" ToolTip="Search History...">=</Button>
+                    <!-- Column 2 (Where to search) -->
+					<Label Name="lblSearchHere"  Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search where ...</Label>
+                    <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,1">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="300" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            
+                        </Grid>
+                    </Border>
+                    <!--<TextBox Name="textBoxFolders"  Grid.Row="1" Grid.Column="1" MaxHeight="90" Text="" AcceptsReturn="True" TextChanged="textBoxFolders_TextChanged" VerticalScrollBarVisibility="Auto" TabIndex="1" Opacity="0.8"/>-->
+                    <xwc:DirectoryChooser Name="dirChooser" Grid.Row="1" Grid.Column="1" MaxHeight="90" TextChanged="dirChooser_TextChanged"  TabIndex="1" IsTabStop="True" Opacity="0.8" ></xwc:DirectoryChooser>
+                        <Button Name="btnFoldersHistory" Grid.Row="1" Grid.Column="1" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnFoldersHistory_Click" ToolTip="Folder History..." Margin="0,0,1,0">=</Button>
+                    <Button Name="Browse"  Grid.Row="1" Grid.Column="1" Click="Browse_Click" VerticalAlignment="top" HorizontalAlignment="right" Margin="0,0,1,0" ToolTip="Browse for folder to search">Browse...</Button>
 
-            </Grid>
+                    <Border Grid.Column="0" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
+                    <Border Grid.Column="1" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
+                    <CheckBox Name="chkRecurse" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True" Margin="10,0,0,0" TabIndex="4" Checked="chkRecurse_Checked">Search sub-folders</CheckBox>
+                        <CheckBox Name="chkBinaries" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" IsChecked="False" Margin="0,0,30,0" TabIndex="5" Checked="chkBinaries_Checked">Search binaries</CheckBox>
+                        <CheckBox Name="chkCaseSensitive" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" TabIndex="6" Checked="chkCaseSensitive_Checked">Case-sensitive search</CheckBox>
+                        <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,10,0" TabIndex="2" IsDefault="True">
+                        	<Button.Background>
+                        		<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                        			<GradientStop Color="#FFF3F3F3" Offset="0"/>
+                        			<GradientStop Color="#FFEBEBEB" Offset="0.5"/>
+                        			<GradientStop Color="#FFDDDDDD" Offset="0.5"/>
+                        			<GradientStop Color="#FF8CE428" Offset="1"/>
+                        		</LinearGradientBrush>
+                        	</Button.Background>_Start Search</Button>
+                        
+                </Grid>
+            </DockPanel>
             <StackPanel Name="panelSeparator" Background="Black" Grid.Row="1" Grid.Column="0" />
             <TabControl Name="tabResults" Grid.Row="2" TabStripPlacement="Bottom">
                 <TabItem Name="tabItemGrid" Header="Grid">
