--- a/Rummage/HistoryPopup.xaml
+++ b/Rummage/HistoryPopup.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Rummage.HistoryPopup"
+﻿<controls:MetroWindow x:Class="Rummage.HistoryPopup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xwc="clr-namespace:XanWPFControls;assembly=XanWPFControls" Title="Rummage - History selector"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False"
         WindowStyle="ToolWindow"
@@ -17,9 +18,9 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnOk" Grid.Column="0" IsDefault="True" Click="btnOk_Click">Ok</Button>
-            <Button Name="btnCancel" Grid.Column="1" IsCancel="True" Click="btnCancel_Click">Cancel</Button>
+            <Button Name="btnOk" Grid.Column="0" IsDefault="True" Click="btnOk_Click" Style="{DynamicResource SquareButtonStyle}">Ok</Button>
+            <Button Name="btnCancel" Grid.Column="1" IsCancel="True" Click="btnCancel_Click" Style="{DynamicResource SquareButtonStyle}">Cancel</Button>
         </Grid>
         <xwc:SmartChooser Name="chooser" MouseDoubleClick="chooser_MouseDoubleClick"></xwc:SmartChooser>
     </DockPanel>
-</Window>
+</controls:MetroWindow>
