--- a/Rummage/MainWindow.xaml
+++ b/Rummage/MainWindow.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Rummage.MainWindow"
+﻿<controls:MetroWindow x:Class="Rummage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xwc="clr-namespace:XanWPFControls;assembly=XanWPFControls"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Title="Rummage" Height="500" Width="1000" ResizeMode="CanResizeWithGrip" KeyDown="Window_KeyDown">
     <DockPanel  Name="dockPanelMain">
@@ -167,7 +168,7 @@
                     <Border Grid.Column="0" Grid.Row="1" BorderBrush="Black" BorderThickness="0,0,1,0">
                         <TextBox Name="textBoxSearchStrings" Grid.Row="1" Grid.Column="0" MaxHeight="90" Text="" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextChanged="textBoxSearchStrings_TextChanged" TabIndex="0" Opacity="0.8" />
                     </Border>
-                    <Button Name="btnSearchHistory" Grid.Row="1" Grid.Column="0" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnSearchHistory_Click" ToolTip="Search History...">=</Button>
+                    <Button Name="btnSearchHistory" Grid.Row="1" Grid.Column="0" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnSearchHistory_Click" ToolTip="Search History..." Style="{DynamicResource SquareButtonStyle}">=</Button>
                     <!-- Column 2 (Where to search) -->
 					<Label Name="lblSearchHere"  Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold">Search where ...</Label>
                     <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,1">
@@ -184,23 +185,24 @@
                     </Border>
                     <!--<TextBox Name="textBoxFolders"  Grid.Row="1" Grid.Column="1" MaxHeight="90" Text="" AcceptsReturn="True" TextChanged="textBoxFolders_TextChanged" VerticalScrollBarVisibility="Auto" TabIndex="1" Opacity="0.8"/>-->
                     <xwc:DirectoryChooser Name="dirChooser" Grid.Row="1" Grid.Column="1" MaxHeight="90" TextChanged="dirChooser_TextChanged"  TabIndex="1" IsTabStop="True" Opacity="0.8" ></xwc:DirectoryChooser>
-                        <Button Name="btnFoldersHistory" Grid.Row="1" Grid.Column="1" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnFoldersHistory_Click" ToolTip="Folder History..." Margin="0,0,1,0">=</Button>
-                    <Button Name="Browse"  Grid.Row="1" Grid.Column="1" Click="Browse_Click" VerticalAlignment="top" HorizontalAlignment="right" Margin="0,0,1,0" ToolTip="Browse for folder to search">Browse...</Button>
+                    <Button Name="btnFoldersHistory" Grid.Row="1" Grid.Column="1" Width="20" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="right" Click="btnFoldersHistory_Click" ToolTip="Folder History..." Margin="0,0,1,0" Style="{DynamicResource SquareButtonStyle}">=</Button>
+                    <Button Name="Browse"  Grid.Row="1" Grid.Column="1" Click="Browse_Click" VerticalAlignment="top" HorizontalAlignment="right" Margin="0,0,1,0" ToolTip="Browse for folder to search" Style="{DynamicResource SquareButtonStyle}">Browse...</Button>
 
                     <Border Grid.Column="0" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
                     <Border Grid.Column="1" Grid.Row="2" BorderBrush="Gray" BorderThickness="0,1,0,0" />
                     <CheckBox Name="chkRecurse" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="True" Margin="10,0,0,0" TabIndex="4" Checked="chkRecurse_Checked">Search sub-folders</CheckBox>
                         <CheckBox Name="chkBinaries" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" IsChecked="False" Margin="0,0,30,0" TabIndex="5" Checked="chkBinaries_Checked">Search binaries</CheckBox>
                         <CheckBox Name="chkCaseSensitive" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" TabIndex="6" Checked="chkCaseSensitive_Checked">Case-sensitive search</CheckBox>
-                        <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,10,0" TabIndex="2" IsDefault="True">
-                        	<Button.Background>
+                    <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="150" Margin="0,0,1,0" TabIndex="2" IsDefault="True" Style="{DynamicResource SquareButtonStyle}">
+                        	<!--<Button.Background>
                         		<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         			<GradientStop Color="#FFF3F3F3" Offset="0"/>
                         			<GradientStop Color="#FFEBEBEB" Offset="0.5"/>
                         			<GradientStop Color="#FFDDDDDD" Offset="0.5"/>
                         			<GradientStop Color="#FF8CE428" Offset="1"/>
                         		</LinearGradientBrush>
-                        	</Button.Background>_Start Search</Button>
+                        	</Button.Background>-->
+                            _Start Search</Button>
                         
                 </Grid>
             </DockPanel>
@@ -239,7 +241,7 @@
                 </TabItem>
                 <TabItem Name="tabItemText" Header="Text">
                     <FlowDocumentScrollViewer Name="ScrollableViewer" Grid.Row="2" Grid.Column="0" HorizontalScrollBarVisibility="Auto">
-                        <FlowDocument Name="flowResults" FontFamily="Courier New" PageWidth="5000" >
+                        <FlowDocument Name="flowResults" FontFamily="Segoe UI" PageWidth="5000" >
                         </FlowDocument>
                     </FlowDocumentScrollViewer>
                 </TabItem>
@@ -248,4 +250,4 @@
 
     </DockPanel>
 
-</Window>
+</controls:MetroWindow>
